<resources>
    <string name="app_name">WarmMeal</string>
    <string name="warm_meal">Warm Meal</string>
    <string name="cook_the_books">Cook the books</string>
    <string name="log_in_underLine"><u>Log in</u></string>
    <string name="passwordText">Password…</string>
    <string name="confirm_password_text">Confirm Password…</string>
    <string name="sign_up">SIGN UP</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="sign_up_with_new_email">Sign up with new Email</string>
    <string name="already_have_an_account">Already Have An Account?</string>
    <string name="gmail_login">Gmail Login</string>
    <string name="log_in">LOG IN</string>
    <string name="log_in_text">LOG IN</string>
    <string name="email_hint_text">Email…</string>
    <string name="title_activity_main_screen">MainScreen</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_for_meal">Search for meal…</string>
    <string name="back_up">Backup your data</string>
    <string name="log_out">Log Out</string>
    <string name="no_result_found">No Result Found.</string>
    <string name="add">+add</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
</resources>