<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_sugar"
    tools:context=".login.view.Login">

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/roboto"
        android:text="@string/log_in_text"
        android:textColor="@color/dark_gray"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginEmailEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/normalMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/roboto_normal"
        android:hint="@string/email_hint_text"
        android:paddingStart="@dimen/normalMargin"
        android:textColor="@color/dark_gray"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTextView" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/loginPasswordEditText"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/normalMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:background="@drawable/custom_edit_text"
        android:fontFamily="@font/roboto_normal"
        android:hint="@string/passwordText"
        android:inputType="textPassword"
        android:paddingStart="@dimen/normalMargin"
        android:textColor="@color/dark_sugar"
        android:textColorHint="@color/light_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailEditText" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/normalMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:background="@drawable/sign_up_button_background"
        android:fontFamily="@font/roboto"
        android:text="@string/log_in"
        android:textColor="@color/dark_gray"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordEditText" />

    <Button
        android:id="@+id/loginBackBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/normalMargin"
        android:layout_marginTop="@dimen/normalMargin"
        android:layout_marginEnd="@dimen/normalMargin"
        android:background="@drawable/sign_up_button_background"
        android:fontFamily="@font/roboto"
        android:text="@string/back"
        android:textColor="@color/dark_gray"
        app:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>