<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_plan.view.PlanFragment"
    android:background="@color/light_sugar"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/calendarMonday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="@string/monday"
            android:textColor="@color/dark_gray"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/calendarMondayAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:background="@drawable/sign_up_button_background"
            app:backgroundTint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/calendarMondayDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/calendarMonday"
            tools:layout_editor_absoluteX="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarMondayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            tools:listitem="@layout/item_plan_fragment"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarMondayDivider" />




        <TextView
            android:id="@+id/calendarTuesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/tuesday"
            android:textColor="@color/dark_gray"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarMondayRecyclerView" />

        <Button
            android:id="@+id/calendarTuesdayAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:background="@drawable/sign_up_button_background"
            android:text="@string/add"
            app:backgroundTint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarMondayRecyclerView"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/calendarTuesdayDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/calendarTuesday"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarTuesdayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarTuesdayDivider" />




        <TextView
            android:id="@+id/calendarWednesday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="Wednesday"
            android:textColor="@color/dark_gray"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarTuesdayRecyclerView" />

        <Button
            android:id="@+id/calendarWednesdayAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:background="@drawable/sign_up_button_background"
            android:text="@string/add"
            app:backgroundTint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarTuesdayRecyclerView"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/calendarWednesdayDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/calendarWednesday"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarWednesdayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarWednesdayDivider" />




        <TextView
            android:id="@+id/calendarThursday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/thursday"
            android:textColor="@color/dark_gray"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarWednesdayRecyclerView" />

        <Button
            android:id="@+id/calendarThursdayAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:background="@drawable/sign_up_button_background"
            android:text="@string/add"
            app:backgroundTint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarWednesdayRecyclerView"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/calendarThursdayDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/calendarThursday"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarThursdayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarThursdayDivider" />




        <TextView
            android:id="@+id/calendarFriday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/friday"
            android:textColor="@color/dark_gray"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarThursdayRecyclerView" />

        <Button
            android:id="@+id/calendarFridayAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:background="@drawable/sign_up_button_background"
            android:text="@string/add"
            app:backgroundTint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarThursdayRecyclerView"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/calendarFridayDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/calendarFriday"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarFridayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarFridayDivider" />




        <TextView
            android:id="@+id/calendarSaturday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/saturday"
            android:textColor="@color/dark_gray"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarFridayRecyclerView" />

        <Button
            android:id="@+id/calendarSaturdayAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:background="@drawable/sign_up_button_background"
            android:text="@string/add"
            app:backgroundTint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarFridayRecyclerView"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/calendarSaturdayDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/calendarSaturday"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarSaturdayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarSaturdayDivider" />




        <TextView
            android:id="@+id/calendarSunday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/roboto"
            android:text="@string/sunday"
            android:textColor="@color/dark_gray"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarSaturdayRecyclerView" />

        <Button
            android:id="@+id/calendarSundayAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normalMargin"
            android:layout_marginEnd="@dimen/smallMargin"
            android:background="@drawable/sign_up_button_background"
            android:text="@string/add"
            app:backgroundTint="@color/dark_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarSaturdayRecyclerView"
            android:visibility="invisible"
            />

        <View
            android:id="@+id/calendarSundayDivider"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_margin="20dp"
            android:background="@color/dark_gray"
            app:layout_constraintTop_toBottomOf="@+id/calendarSunday"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/calendarSundayRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/calendarSundayDivider" />




    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>